--- a/Examples/HelloWorld/HelloWorld.vcxproj
+++ b/Examples/HelloWorld/HelloWorld.vcxproj
@@ -18,118 +18,34 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="Ast\Assignment.cpp" />
-    <ClCompile Include="Ast\BinaryOperator.cpp" />
-    <ClCompile Include="Ast\Block.cpp" />
-    <ClCompile Include="Ast\BlockPart.cpp" />
-    <ClCompile Include="Ast\Double.cpp" />
-    <ClCompile Include="Ast\Expression.cpp" />
-    <ClCompile Include="Ast\ExpressionStatement.cpp" />
-    <ClCompile Include="Ast\FileScope.cpp" />
-    <ClCompile Include="Ast\Function.cpp" />
-    <ClCompile Include="Ast\FunctionParameter.cpp" />
-    <ClCompile Include="Ast\Identifier.cpp" />
-    <ClCompile Include="Ast\Integer32.cpp" />
-    <ClCompile Include="Ast\Integer64.cpp" />
-    <ClCompile Include="Ast\Literal.cpp" />
-    <ClCompile Include="Ast\MethodCall.cpp" />
-    <ClCompile Include="Ast\Node.cpp" />
-    <ClCompile Include="Ast\Scope.cpp" />
-    <ClCompile Include="Ast\Statement.cpp" />
-    <ClCompile Include="Ast\Struct.cpp" />
-    <ClCompile Include="Ast\StructPart.cpp" />
-    <ClCompile Include="Ast\StructVariable.cpp" />
-    <ClCompile Include="Ast\VariableDeclaration.cpp" />
-    <ClCompile Include="CompileError.cpp" />
-    <ClCompile Include="Module.cpp" />
-    <ClCompile Include="NabaLPch.cpp">
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
-    </ClCompile>
-    <ClCompile Include="ParseModule.cpp" />
-    <ClCompile Include="Parser\ParserPchWrapper.cpp" />
-    <ClCompile Include="Parser\TokensPchWrapper.cpp" />
-    <ClCompile Include="SourceCodeError.cpp" />
-    <ClCompile Include="TranslationUnit.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="Ast\Assignment.h" />
-    <ClInclude Include="Ast\BinaryOperator.h" />
-    <ClInclude Include="Ast\Block.h" />
-    <ClInclude Include="Ast\BlockPart.h" />
-    <ClInclude Include="Ast\Double.h" />
-    <ClInclude Include="Ast\Expression.h" />
-    <ClInclude Include="Ast\ExpressionStatement.h" />
-    <ClInclude Include="Ast\FileScope.h" />
-    <ClInclude Include="Ast\Function.h" />
-    <ClInclude Include="Ast\FunctionParameter.h" />
-    <ClInclude Include="Ast\Identifier.h" />
-    <ClInclude Include="Ast\Integer32.h" />
-    <ClInclude Include="Ast\Integer64.h" />
-    <ClInclude Include="Ast\Literal.h" />
-    <ClInclude Include="Ast\MethodCall.h" />
-    <ClInclude Include="Ast\Node.h" />
-    <ClInclude Include="Ast\Scope.h" />
-    <ClInclude Include="Ast\Statement.h" />
-    <ClInclude Include="Ast\Struct.h" />
-    <ClInclude Include="Ast\StructPart.h" />
-    <ClInclude Include="Ast\StructVariable.h" />
-    <ClInclude Include="Ast\VariableDeclaration.h" />
-    <ClInclude Include="CompileError.h" />
-    <ClInclude Include="Module.h" />
-    <ClInclude Include="NabaLPch.h" />
-    <ClInclude Include="NabalPchHeaders.h" />
-    <ClInclude Include="ParseModule.h" />
-    <ClInclude Include="SourceCodeError.h" />
-    <ClInclude Include="TranslationUnit.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <CustomBuild Include="Parser\parser.y">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ExcludedFromBuild>
-      <FileType>Document</FileType>
-      <Command Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">c:\apps\winflexbison\win_bison.exe -d -o C:\dev\NabaX\NabaR\NabaL\Parser\Parser.cpp C:\dev\NabaX\NabaR\NabaL\Parser\Parser.y</Command>
-      <Outputs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Parser.cpp</Outputs>
-    </CustomBuild>
-    <CustomBuild Include="Parser\tokens.l">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ExcludedFromBuild>
-      <FileType>Document</FileType>
-      <Command Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">C:\apps\winflexbison\win_flex.exe    --outfile=Parser/Tokens.cpp --header-file=Parser/Tokens.h Parser/Tokens.l</Command>
-      <Outputs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Parser/Tokens.cpp;Parser/Tokens.h</Outputs>
-    </CustomBuild>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\Tk\Tk.vcxproj">
-      <Project>{bd70c313-fbe0-4d8b-bf5e-e7c2eb037532}</Project>
-    </ProjectReference>
-  </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{2D4CD176-EF1B-454B-8CBC-558F120DDDAC}</ProjectGuid>
+    <ProjectGuid>{BB078483-F2B5-4F39-9CD6-3242C1C56148}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>NabaL</RootNamespace>
+    <RootNamespace>HelloWorld</RootNamespace>
     <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
-    <ConfigurationType>StaticLibrary</ConfigurationType>
+    <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v140</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
-    <ConfigurationType>StaticLibrary</ConfigurationType>
+    <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v140</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
-    <ConfigurationType>StaticLibrary</ConfigurationType>
+    <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v140</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
-    <ConfigurationType>StaticLibrary</ConfigurationType>
+    <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v140</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
@@ -153,19 +69,29 @@
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
-  <PropertyGroup />
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
+    <LinkIncremental>true</LinkIncremental>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+    <LinkIncremental>true</LinkIncremental>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
+    <LinkIncremental>false</LinkIncremental>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+    <LinkIncremental>false</LinkIncremental>
+  </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
-      <PrecompiledHeader>Use</PrecompiledHeader>
+      <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>WIN32;_DEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
-      <PrecompiledHeaderFile>NabaLPch.h</PrecompiledHeaderFile>
-      <AdditionalIncludeDirectories>.;../../</AdditionalIncludeDirectories>
+      <PrecompiledHeaderFile />
     </ClCompile>
     <Link>
-      <SubSystem>Windows</SubSystem>
+      <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
@@ -174,11 +100,11 @@
       <PrecompiledHeader>Use</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>_DEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
     </ClCompile>
     <Link>
-      <SubSystem>Windows</SubSystem>
+      <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
@@ -189,11 +115,11 @@
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <PreprocessorDefinitions>WIN32;NDEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
     </ClCompile>
     <Link>
-      <SubSystem>Windows</SubSystem>
+      <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
@@ -206,16 +132,26 @@
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <PreprocessorDefinitions>NDEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
     </ClCompile>
     <Link>
-      <SubSystem>Windows</SubSystem>
+      <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
     </Link>
   </ItemDefinitionGroup>
+  <ItemGroup>
+    <ClCompile Include="HelloWorld.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <CustomBuild Include="Main.aspp">
+      <FileType>Document</FileType>
+      <Command Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">C:\dev\NabaX\Debug\NabaC.exe C:/dev/NabaX/Examples/HelloWorld</Command>
+      <Outputs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">HelloWorld.cpp</Outputs>
+    </CustomBuild>
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
