--- a/NabaR/NabaL/NabaL.vcxproj.filters
+++ b/NabaR/NabaL/NabaL.vcxproj.filters
@@ -99,6 +99,12 @@
     <ClCompile Include="TranslationUnit.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="SourceCodeError.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="CompileError.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="NabaLPch.h">
@@ -180,6 +186,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="TranslationUnit.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="SourceCodeError.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="CompileError.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
