--- a/NabaR/NabaIr/NabaIr.vcxproj.filters
+++ b/NabaR/NabaIr/NabaIr.vcxproj.filters
@@ -75,6 +75,9 @@
     <ClInclude Include="BlockBuilder.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="FunctionBuilder.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="NabaIrPch.cpp">
@@ -120,6 +123,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="BlockBuilder.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="FunctionBuilder.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
